# excel-mcp

./: .gitignore  DEVELOPMENT_GUIDE.md  LICENSE  MasterBlaster v1.4.2.xlsx  README.md  excel_monitor_simple.py  pyproject.toml  requirements.txt  start_simple_monitor.bat  start_simple_monitor.sh  test_excel.py
.claude/: settings.local.json
excel_files/: beam_analysis.xlsx  column_design.xlsx  foundation_calculations.xlsx
src/excel_mcp/: __init__.py  engineering_tools.py  excel_tools.py  fast_analysis.py  server.py  simple_server.py
