[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-mcp"
version = "0.1.0"
description = "MCP server for Excel file operations"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1.0"
]

[project.scripts]
excel-mcp = "excel_mcp.server:main"